style: fix vertical element overlapping issue

--- a/assets/styles/pages/_project.scss
+++ b/assets/styles/pages/_project.scss
@@ -1,10 +1,8 @@
-.project-container {
+.project .container .content {
+	margin-top: 100px;
 	position: relative;
 	height: 100%;
-	.project {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
+	.project__container {
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
